iroha_data_model/derive/tests/ui_fail/transparent_api_private_field.stderr
error[E0616]: field `signatory` of struct `iroha_data_model::account::AccountId` is private
 --> tests/ui_fail/transparent_api_private_field.rs:5:35
  |
5 |     println!("ID: {}", account_id.signatory);
  |                                   ^^^^^^^^^ private field
  |
help: a method `signatory` also exists, call it with parentheses
  |
5 |     println!("ID: {}", account_id.signatory());
  |                                            ++
